--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,10 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   video_player: ^2.4.5
   shimmer: ^2.0.0
+  firebase_auth: ^3.4.2
+  firebase_core: ^1.19.2
 
 dev_dependencies:
   flutter_test:
