--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shimmer: ^2.0.0
   firebase_auth: ^3.4.2
   firebase_core: ^1.19.2
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_test:
