--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^3.4.2
   firebase_core: ^1.19.2
   flutter_bloc: ^8.0.1
+  mocktail: ^0.3.0
 
 dev_dependencies:
   flutter_test:
