--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.19.2
   flutter_bloc: ^8.0.1
   mocktail: ^0.3.0
+  bloc_test: ^9.0.3
 
 dev_dependencies:
   flutter_test:
