--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
 
 
   video_player: ^2.4.5
-  shimmer: ^2.0.0
+  collection: ^1.16.0
   firebase_auth: ^3.4.2
   firebase_core: ^1.19.2
   flutter_bloc: ^8.0.1
