--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,6 @@ jobs:
           flutter-version: '3.0.5'
           channel: 'stable'
       - run: flutter --version
+      - run: flutter pub get
       - run: dart analyze
       - run: flutter test
